# rmpr

./: Cargo.toml  LICENSE  README.md  flake.nix  mailmap.txt
src/: main.rs
src/data/: config.rs  mod.rs
src/data/metadata/: file_metadata.rs
src/data/queue/: metadata_queue.rs  mod.rs  music_queue.rs  queue_funcs.rs
src/handlers/: input_handler.rs  sink_handler.rs
src/tui/: app.rs  fs_browser.rs  mod.rs
src/tui/handle_events/: key_event.rs  mod.rs  queue_funcs.rs
src/tui/render/: app.rs  display.rs  fs_browser.rs  mod.rs  widget_funcs.rs
test-files/: config.toml
