[package]
name    = "rmpr"
version = "0.1.0"
edition = "2024"

[dependencies]
audiotags  = "0.5.0"
crossterm  = "0.28.1"
dirs       = "6.0.0"
ratatui    = "0.30.0"
rodio      = { version = "0.20.1", features = ["symphonia-all"] }
serde      = { version = "1.0.219", features = ["derive"] }
toml       = "0.8.20"

[profile.release]
opt-level     = 3
debug         = 0
strip         = true
lto           = true
codegen-units = 1
panic         = "unwind"
